wip: parsing core utilities

--- a/dbms/CMakeLists.txt
+++ b/dbms/CMakeLists.txt
@@ -11,5 +11,4 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
 
-add_executable(${PROJECT_NAME} src/lauradb.cpp)
-target_link_libraries(${PROJECT_NAME} CONAN_PKG::boost CONAN_PKG::fmt)
+add_subdirectory(src)
