wip: experimenting with functional parameters

--- a/dbms/.vscode/settings.json
+++ b/dbms/.vscode/settings.json
@@ -68,6 +68,9 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "semaphore": "cpp"
+        "semaphore": "cpp",
+        "strstream": "cpp",
+        "complex": "cpp",
+        "valarray": "cpp"
     }
 }
