--- a/dbms/CMakeLists.txt
+++ b/dbms/CMakeLists.txt
@@ -4,9 +4,11 @@ project(
   lauradb
   VERSION 1.0
   LANGUAGES CXX)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+add_compile_options(-Wall -Wextra -pedantic -Werror -fconcepts)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup(TARGETS)
