refactor: api based on classy parsers

--- a/dbms/.vscode/settings.json
+++ b/dbms/.vscode/settings.json
@@ -71,6 +71,7 @@
         "semaphore": "cpp",
         "strstream": "cpp",
         "complex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "*.ipp": "cpp"
     }
 }
