--- a/dbms/.gitignore
+++ b/dbms/.gitignore
@@ -43,3 +43,9 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+
+# vscode
+.vscode/
+!.vscode/tasks.json
+!.vscode/launch.json
